bench/tests/query_results/snapshots/r#mod__query_results__windfarm__Grouped Production Q4 (PlainTerm).snap
---
source: bench/tests/query_results/windfarm.rs
expression: "run_select_query(&store,\ninclude_str!(\"./queries/wind-farm-grouped-production-query4.sparql\")).await"
---
{
  "head": {
    "vars": [
      "site_label",
      "wtur_label",
      "year",
      "month",
      "day",
      "hour",
      "minute_10",
      "avg_val"
    ]
  },
  "results": {
    "bindings": [
      {
        "avg_val": {
          "datatype": "http://www.w3.org/2001/XMLSchema#double",
          "type": "literal",
          "value": "7796289.200858505"
        },
        "day": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "30"
        },
        "hour": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "8"
        },
        "minute_10": {
          "datatype": "http://www.w3.org/2001/XMLSchema#decimal",
          "type": "literal",
          "value": "40"
        },
        "month": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "8"
        },
        "site_label": {
          "type": "literal",
          "value": "Gale Valley"
        },
        "wtur_label": {
          "type": "literal",
          "value": "A1"
        },
        "year": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "2022"
        }
      },
      {
        "avg_val": {
          "datatype": "http://www.w3.org/2001/XMLSchema#double",
          "type": "literal",
          "value": "7795129.206618962"
        },
        "day": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "30"
        },
        "hour": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "8"
        },
        "minute_10": {
          "datatype": "http://www.w3.org/2001/XMLSchema#decimal",
          "type": "literal",
          "value": "50"
        },
        "month": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "8"
        },
        "site_label": {
          "type": "literal",
          "value": "Gale Valley"
        },
        "wtur_label": {
          "type": "literal",
          "value": "A1"
        },
        "year": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "2022"
        }
      },
      {
        "avg_val": {
          "datatype": "http://www.w3.org/2001/XMLSchema#double",
          "type": "literal",
          "value": "7793161.645418531"
        },
        "day": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "30"
        },
        "hour": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "9"
        },
        "minute_10": {
          "datatype": "http://www.w3.org/2001/XMLSchema#decimal",
          "type": "literal",
          "value": "0"
        },
        "month": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "8"
        },
        "site_label": {
          "type": "literal",
          "value": "Gale Valley"
        },
        "wtur_label": {
          "type": "literal",
          "value": "A1"
        },
        "year": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "2022"
        }
      },
      {
        "avg_val": {
          "datatype": "http://www.w3.org/2001/XMLSchema#double",
          "type": "literal",
          "value": "7782867.750758758"
        },
        "day": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "30"
        },
        "hour": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "9"
        },
        "minute_10": {
          "datatype": "http://www.w3.org/2001/XMLSchema#decimal",
          "type": "literal",
          "value": "10"
        },
        "month": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "8"
        },
        "site_label": {
          "type": "literal",
          "value": "Gale Valley"
        },
        "wtur_label": {
          "type": "literal",
          "value": "A1"
        },
        "year": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "2022"
        }
      },
      {
        "avg_val": {
          "datatype": "http://www.w3.org/2001/XMLSchema#double",
          "type": "literal",
          "value": "7789637.599417427"
        },
        "day": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "30"
        },
        "hour": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "9"
        },
        "minute_10": {
          "datatype": "http://www.w3.org/2001/XMLSchema#decimal",
          "type": "literal",
          "value": "20"
        },
        "month": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "8"
        },
        "site_label": {
          "type": "literal",
          "value": "Gale Valley"
        },
        "wtur_label": {
          "type": "literal",
          "value": "A1"
        },
        "year": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "2022"
        }
      },
      {
        "avg_val": {
          "datatype": "http://www.w3.org/2001/XMLSchema#double",
          "type": "literal",
          "value": "7788157.531296695"
        },
        "day": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "30"
        },
        "hour": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "9"
        },
        "minute_10": {
          "datatype": "http://www.w3.org/2001/XMLSchema#decimal",
          "type": "literal",
          "value": "30"
        },
        "month": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "8"
        },
        "site_label": {
          "type": "literal",
          "value": "Gale Valley"
        },
        "wtur_label": {
          "type": "literal",
          "value": "A1"
        },
        "year": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "2022"
        }
      },
      {
        "avg_val": {
          "datatype": "http://www.w3.org/2001/XMLSchema#double",
          "type": "literal",
          "value": "7787551.4092670195"
        },
        "day": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "30"
        },
        "hour": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "9"
        },
        "minute_10": {
          "datatype": "http://www.w3.org/2001/XMLSchema#decimal",
          "type": "literal",
          "value": "40"
        },
        "month": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "8"
        },
        "site_label": {
          "type": "literal",
          "value": "Gale Valley"
        },
        "wtur_label": {
          "type": "literal",
          "value": "A1"
        },
        "year": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "2022"
        }
      },
      {
        "avg_val": {
          "datatype": "http://www.w3.org/2001/XMLSchema#double",
          "type": "literal",
          "value": "7780092.301139752"
        },
        "day": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "30"
        },
        "hour": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "9"
        },
        "minute_10": {
          "datatype": "http://www.w3.org/2001/XMLSchema#decimal",
          "type": "literal",
          "value": "50"
        },
        "month": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "8"
        },
        "site_label": {
          "type": "literal",
          "value": "Gale Valley"
        },
        "wtur_label": {
          "type": "literal",
          "value": "A1"
        },
        "year": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "2022"
        }
      },
      {
        "avg_val": {
          "datatype": "http://www.w3.org/2001/XMLSchema#double",
          "type": "literal",
          "value": "7777626.313333334"
        },
        "day": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "30"
        },
        "hour": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "10"
        },
        "minute_10": {
          "datatype": "http://www.w3.org/2001/XMLSchema#decimal",
          "type": "literal",
          "value": "0"
        },
        "month": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "8"
        },
        "site_label": {
          "type": "literal",
          "value": "Gale Valley"
        },
        "wtur_label": {
          "type": "literal",
          "value": "A1"
        },
        "year": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "2022"
        }
      },
      {
        "avg_val": {
          "datatype": "http://www.w3.org/2001/XMLSchema#double",
          "type": "literal",
          "value": "7774602.599276076"
        },
        "day": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "30"
        },
        "hour": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "10"
        },
        "minute_10": {
          "datatype": "http://www.w3.org/2001/XMLSchema#decimal",
          "type": "literal",
          "value": "10"
        },
        "month": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "8"
        },
        "site_label": {
          "type": "literal",
          "value": "Gale Valley"
        },
        "wtur_label": {
          "type": "literal",
          "value": "A1"
        },
        "year": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "2022"
        }
      }
    ]
  }
}
